--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Juan Padron"
-  avatar           : "photo_2023-01-25_11-24-43.jpg"
+  avatar           : "roundavatar.png"
   bio              : "Assistant Professor @ Nagaoka UTech"
   location         : "Nagaoka, Japan"
   employer         :
